# amr-esm-prediction

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
data/drug_targets/: __init__.py  compensatory.py  targets.py
data/lineage_backgrounds/: __init__.py  backgrounds.py
data/protein_sequences/: sequences.json
data/who_catalogue/: __init__.py  catalogue.py
experiments/: __init__.py  denovo_design.py  emergence_forecast.py  panel_design.py  prospective.py  retrospective.py
models/: __init__.py  binding_disruption.py  esm2_scorer.py
notebooks/: figures.ipynb
research/: README.md
research/models/: emergence_simulator.py  epistasis_scorer.py
scripts/: generate_figures.py
